--- a/TheList/static/css/main.css
+++ b/TheList/static/css/main.css
@@ -1,20 +1,27 @@
-body {padding-top: 0px;}
+body {
+  padding-top: 0px;
+}
+
 #search-box{
 	width: 60%;
 	display:block;
 	margin-left: 	20%;
 	margin-right: 20%;
 }
+
 #search-bar{
-	
 	width:80%;
-	
-	
-	
 }
+
 #search-submit{
 	/*width:auto;*/
 }
+
 .navbar{
 	border-bottom:0;
+}
+
+#username{
+  cursor: hand;
+  cursor: pointer;
 }
