Users now finish registration

--- a/TheList/static/css/main.css
+++ b/TheList/static/css/main.css
@@ -43,3 +43,12 @@ body {
   cursor: hand;
   cursor: pointer;
 }
+
+#register-button{
+  height: 0px;
+  width: 0px;
+}
+
+.error{
+  color: red;
+}
