--- a/TheList/static/css/main.css
+++ b/TheList/static/css/main.css
@@ -6,12 +6,21 @@ body {padding-top: 0px;}
 	margin-right: 20%;
 }
 #search-bar{
-	
 	width:80%;
-	
-	
-	
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
+#search-bar input {
+  width: 90%;
+  float: left;
+  display: inline;
+}
+#search-bar button {
+  float: right;
+  display: inline;
+}
+
 #search-submit{
 	/*width:auto;*/
 }
