--- a/TheList/static/css/main.css
+++ b/TheList/static/css/main.css
@@ -79,3 +79,11 @@ body {
   transition: all 1s ease;
 }
 
+.transaction{
+  margin-left: 30px;
+}
+
+.transactionBtn{
+  float: right;
+  margin-right: 5px;
+}
