--- a/TheList/static/css/main.css
+++ b/TheList/static/css/main.css
@@ -16,7 +16,7 @@ body {
   margin-right: auto;
 }
 #search-bar input {
-  width: 90%;
+  width: 88%;
   float: left;
   display: inline;
 }
@@ -65,6 +65,7 @@ body {
   display:block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 50px;
   top:10px;
 }
 #username{
