--- a/TheList/static/css/main.css
+++ b/TheList/static/css/main.css
@@ -99,3 +99,9 @@ body {
   float: right;
   margin-right: 5px;
 }
+.search-results {
+  text-align: center;
+}
+.searc-results:hover {
+  box-shadow: 0px 0px 3px 3px black;
+}
