styles for search results

--- a/TheList/static/css/main.css
+++ b/TheList/static/css/main.css
@@ -99,9 +99,12 @@ body {
   float: right;
   margin-right: 5px;
 }
-.search-results {
+.search-result {
   text-align: center;
 }
-.searc-results:hover {
+.search-result:hover {
   box-shadow: 0px 0px 3px 3px black;
+}
+.search-result a {
+  margin-bottom: 10px;
 }
